--- a/package.json
+++ b/package.json
@@ -5,21 +5,6 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "@angular/common": "4.0.2",
-    "@angular/compiler": "4.0.2",
-    "@angular/core": "4.0.2",
-    "@angular/forms": "4.0.2",
-    "@angular/http": "4.0.2",
-    "@angular/platform-browser": "4.0.2",
-    "@angular/platform-browser-dynamic": "4.0.2",
-    "@angular/router": "4.0.2",
-    "@angular/upgrade": "4.0.2",
-    "angular-in-memory-web-api": "~0.3.0",
-    "core-js": "^2.4.1",
-    "ejs": "2.3.4",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "express": "^4.14.0",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -37,13 +22,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.2",
-    "systemjs": "0.19.40",
-    "zone.js": "^0.8.4",
-    "rc": "1.0.1",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "5.0.1",
-    "sails": "~0.12.13"
+    "sails-mongo": "^0.12.2"
   },
   "scripts": {
     "debug": "node debug app.js",
